--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my site</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>NO</h1>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>gs meme</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="main">
+    <div class="header">
+      <img src="images/gus_pain.jpg" class="side-img left" alt="left eagle">
+      <h2 class="handle" id="rot">@austinGS_</h2>
+      <img src="images/helton_clown.png" class="side-img right" alt="right eagle">
+    </div>
+
+    <h1 class="no">NO</h1>
+    <h3 class="days">days since georgia southern had a good head coach: <span id="days"></span></h3>
+
+    <footer>
+      <p>Fire clay helton</p>
+      <p>Signed: @austinGS_</p>
+      <p><a href="https://x.com/austinGS_" target="_blank">tweet @ me to sign</a></p>
+    </footer>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
