--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>gs meme</title>
+  <title>pls</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,12 +14,13 @@
       <img src="images/helton_clown.png" class="side-img right" alt="right eagle">
     </div>
 
+    <h2 class="question">Is Helton fired yet?</h2>
     <h1 class="no">NO</h1>
     <h3 class="days">days since georgia southern had a good head coach: <span id="days"></span></h3>
 
     <footer>
-      <p>Fire clay helton</p>
-      <p>Signed: @austinGS_</p>
+      <p>Fire Clay Helton</p>
+      <p>Signed: @austinGS_, @LKGingerBread</p>
       <p><a href="https://x.com/austinGS_" target="_blank">tweet @ me to sign</a></p>
     </footer>
   </div>
