Adding names to petition

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <footer>
       <p>Fire Clay Helton</p>
-      <p>Signed: @austinGS_, @LKGingerBread</p>
+      <p>Signed: @austinGS_, @LKGingerBread, @NotHCHelton, @CSG_GaSouthern</p>
       <p><a href="https://x.com/austinGS_" target="_blank">tweet @ me to sign</a></p>
     </footer>
   </div>
